Fixing css layout issues, related with display:inline-block and whitespaces

--- a/css/sass/master.sass
+++ b/css/sass/master.sass
@@ -23,6 +23,7 @@ body
       margin-bottom: 15px
 
     .board
+      font-size: 0px
       border: 1px solid $white
       display: inline-block
       margin: auto
